--- a/vagrant-provision.yml
+++ b/vagrant-provision.yml
@@ -1,6 +1,6 @@
 - name: Install and configure stuff already available on SURF Research Cloud before the research-cloud-plugin.yml playbook is run
   hosts: all
-  gather_facts: false
+  gather_facts: true
   tasks:
     - name: Wait for system to become reachable
       wait_for_connection:
@@ -16,6 +16,45 @@
     - name: Apt upgrade
       apt:
         upgrade: yes
+
+    - name: Nginx
+      apt:
+        name: nginx-light
+
+    - name: Websocket support
+      copy:
+        dest: /etc/nginx/conf.d/websocket.conf
+        mode: 0644
+        content: |
+          map $http_upgrade $connection_upgrade {
+            default upgrade;
+            ''      close;
+          }
+
+    - name: /etc/nginx/app-location-conf.d
+      file:
+        path: /etc/nginx/app-location-conf.d
+        mode: 0755
+        state: directory
+
+    - name: Site
+      copy:
+        dest: /etc/nginx/sites-enabled/default
+        mode: 0644
+        content: |
+          server {
+            listen 80 default_server;
+            listen [::]:80 default_server;
+            root /var/www/html;
+            index index.html index.htm index.nginx-debian.html;
+            server_name _;
+            include /etc/nginx/app-location-conf.d/*.conf;
+          }
+
+    - name: Restart nginx
+      systemd:
+        name: nginx
+        state: restarted
 
     - name: Next
       debug:
