--- a/application-jupyter.yml
+++ b/application-jupyter.yml
@@ -71,12 +71,14 @@
         pip:
           name: "{{ packages }}"
           executable: pip3
+          extra_args: "-U"
         vars:
           packages:
           - jupyterlab  #==3.0.11
           - jupyterhub  #==1.3.0
           - virtualenv  #==20.4.3
           - jupyterlab-git  #==0.30.0b3
+          - jinja2
 
       - name: Ensure configurable-http-proxy is installed
         npm:
