--- a/application-jupyter.yml
+++ b/application-jupyter.yml
@@ -22,6 +22,7 @@
           - python3
           - python3-setuptools
           - python3-pip
+          - python3-matplotlib
           - jq
           - curl
           - nodejs
