--- a/create_user.yml
+++ b/create_user.yml
@@ -1,23 +1,14 @@
 ---
 - name: Create a User
   hosts: all
-  vars:
-    user_username: amuse
-    user_password: amuse
-    user_passfile: ./password.hash
   tasks:
-    - name: Generate User Password file
-      shell: python3 ./password_hasher.py {{ user_password }} > {{ user_passfile }}
-      args:
-        creates: "{{ user_passfile }}"
-      delegate_to: localhost
-
-    - name: Ensure User is Present
+    - name: add extra users 
       become: true
       user:
-        name: "{{ user_username }}"
-        password: "{{ lookup('file', user_passfile) }}" 
+        name: "{{ item[0] }}"
+        password: "{{ item[1] | password_hash('sha512') }}" 
         group: users 
         generate_ssh_key: yes
         shell: "/bin/bash"
         state: present
+      loop: "{{ list_of_users }}"
